gnome-xkb-info: Honor the 'show-all-sources' gsettings key

When this key is set to true we also load XKB layouts and options from
xkeyboard-config's .extras.xml file.

https://bugzilla.gnome.org/show_bug.cgi?id=682240